tests/baselines/reference/symbolProperty8(strict=true).errors.txt
symbolProperty8.ts(3,5): error TS7010: '[Symbol.toPrimitive]', which lacks return-type annotation, implicitly has an 'any' return type.


==== symbolProperty8.ts (1 errors) ====
    interface I {
        [Symbol.unscopables]: number;
        [Symbol.toPrimitive]();
        ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: '[Symbol.toPrimitive]', which lacks return-type annotation, implicitly has an 'any' return type.
    }